[FIX] Make .alert-action visible inside .alert-important

--- a/core/scss/ui/_alerts.scss
+++ b/core/scss/ui/_alerts.scss
@@ -89,6 +89,16 @@
   }
 }
 
+
+.alert-action {
+    color: inherit;
+    text-decoration: underline;
+    display: inline;
+
+    &:hover {
+      text-decoration: none;
+    }
+
 .alert-minor {
   background: transparent;
   border-color: var(--tblr-border-color);
@@ -98,4 +108,6 @@
   .alert-#{$name} {
     --#{$prefix}alert-color: var(--#{$prefix}#{$name});
   }
+}
+
 }
